[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "ruff>=0.0.275",
    "assertpy>=1.1",
    "pytest-asyncio>=0.21.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "seito"
version = "0.1.0"
description = "rusty container"
authors = [
    {name = "Marco", email = "cram@hotmail.fr"},
]
dependencies = [
    "aiohttp>=3.8.4",
    "pampy>=0.3.0",
    "exceptiongroup>=1.1.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
